almost done chat-page still yet problem with new line in message

--- a/web-components/src/index.css
+++ b/web-components/src/index.css
@@ -23,6 +23,6 @@ message-form {
     height: 100%;
     display: flex;
     flex-direction: column;
-    margin-bottom: auto;
+    margin: 0;
     flex: 1;
 }
