--- a/web-components/src/index.css
+++ b/web-components/src/index.css
@@ -8,7 +8,12 @@ html {
 *::after {
     box-sizing: inherit;
 }
-
+.wrapper {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
 body {
     margin: 0;
     background-color: #fff;
@@ -17,7 +22,7 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+
 }
 
 message-form {
