--- a/src/components/DialogList/DialogList.module.css
+++ b/src/components/DialogList/DialogList.module.css
@@ -1,3 +1,16 @@
+.dialog_list_wrap{
+    height: 100%;
+    left: 0%;
+    display: flex;
+    position: absolute;
+    width: 100%;
+    flex-direction: column;
+    margin: 0;
+    flex: 1;
+    transition-duration: 0.5s;
+    animation: translating 4s linear infinite;
+}
+
 .modal {
     font-size: 3vh;
     display: none; /* Hidden by default */
