--- a/src/components/DialogPage/styles.module.css
+++ b/src/components/DialogPage/styles.module.css
@@ -1,7 +1,3 @@
-top-line {
-    height: 10vh;            
-}
-
 .message_form {
     height: 100%;
     display: flex;
@@ -23,7 +19,7 @@ top-line {
     font-family: Helvetica, Arial, sans-serif;
 }
 
-.messageText {
+textarea {
     flex: 8;
     color: transparent;
     text-shadow: 0px 0px 0px #000000;
@@ -32,19 +28,12 @@ top-line {
     overflow:hidden;
     padding-left: 20px;
 }
-button {
-    background-color: #0084ff;
-    color: #fff;
-    font-size: 3vh;
-    border-radius: 20px;
-    flex: 1;
-}
 
-form {
+.sendMessForm {
     flex: 1;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .result {
@@ -73,5 +62,9 @@ form {
     }
 
 input[type=submit] {
-    visibility: collapse;
+    background-color: #0084ff;
+    color: #fff;
+    font-size: 3vh;
+    border-radius: 20px;
+    flex: 1;
 }
