--- a/src/components/DialogPage/topLine.module.css
+++ b/src/components/DialogPage/topLine.module.css
@@ -1,19 +1,19 @@
 .container {
-    display: flex;
-    font-size: 3vh;
-    background-color: #0084ff;
-    height: 10vh;
+  display: flex;
+  font-size: 3vh;
+  background-color: #0084ff;
+  height: 10vh;
 }
 .chatImg {
-    flex: 1;
-    max-height: 10vh;
-    max-width: 10vh;
-    border-radius: 50%;
+  flex: 1;
+  max-height: 10vh;
+  max-width: 10vh;
+  border-radius: 50%;
 }
 .topic {
-    font-size: 5vh;
-    color: #fff;
-    margin: auto;
-    flex: 1;
-    text-align:center;
+  font-size: 5vh;
+  color: #fff;
+  margin: auto;
+  flex: 1;
+  text-align: left;
 }
