--- a/src/components/DialogPage/styles.module.css
+++ b/src/components/DialogPage/styles.module.css
@@ -1,3 +1,36 @@
+.attachmentType {
+  position: absolute;
+  bottom: 15vh;
+  left: 50vw;
+  background-color: #eee;
+  opacity: 1;
+  width: 45vw;
+  height: 30vh;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition-duration: 0.2s;
+  transform: scale(0);
+}
+
+.attachmentType > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1em;
+  width: 85%;
+  height: 25%;
+  border-radius: 5px;
+  background-color: rgb(214, 213, 213);
+  margin: 1vh;
+}
+
+.attachmentType > div:hover {
+  background-color: rgb(136, 133, 133);
+}
+
 .message_form {
   height: 100%;
   display: flex;
@@ -12,10 +45,11 @@
 
 .input_panel {
   background: #eee;
-  flex: 1;
+  flex: 1.5;
   padding: 10px;
   opacity: 1;
   display: flex;
+  height: 100%;
   font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -67,4 +101,9 @@ input[type='submit'] {
   font-size: 3vh;
   border-radius: 20px;
   flex: 1;
+}
+
+.messageText {
+  flex: 1;
+  margin: 5px;
 }
